# education

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: settings.py  urls.py
events/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  utils.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_description.py  0003_eventview_created_at.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_passwordreset.py  0003_user_age_user_device_token_user_type.py
users/templates/: verification_failed.html  verification_success.html
